# node-rfc

./: .buildinfo  .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .python-version  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  VERSION  alllog.txt  binding.gyp  build.sh  ci-test.sh  common.gypi  index.js  jest.config.js  package-lock.json  package.json  release.sh  sapnwrfc.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
.reuse/: dep5
ci/utils/: node-version-install.bat  node-version.bat  node-version.sh  nvm.sh  nwrfcsdk-version-darwin.sh  nwrfcsdk-version-linux.sh  nwrfcsdk-version.bat
demo/: demo.js  demo1.js  demo2.js  demo3.js  test1.js
doc/: Makefile  api.md  authentication.md  authentication.rst  bibliography.rst  conf.py  env.md  index.rst  install.rst  installation.md  intro.rst  make.bat  remarks.rst  troubleshooting.md  usage.md
examples/: README.md  package-lock.json  package.json  pserver.js  server-test-blog.mjs  server-test-blog.ts  server.js  server.mjs  server.ts  server_functions.ts  zserver_stfc_connection.abap  zserver_stfc_struct.abap
examples/js/: abapSystem.js  callbacks.js  pool.js  promises.js
examples/ts/: abapSystem.ts  async.ts
exp/: call.js  datatypes.js  exception.js  issue25.js  issue53.js  master-200-x-10000-v8.11.1.txt  memleak.js  perf.js  performance.js  pool.js  promise.js  ptest.js
frameworks/: README.md
frameworks/electron-quick-start/: README.md  index.html  main.js  preload.js
frameworks/nwjs-quick-start/: README.md  index.html  index.js  package-lock.json  sapnwrfc.ini
invalid-handle/: index.js  package-lock.json  package.json  run.sh  sapnwrfc.ini
invalid-handle/trace/: log.txt
issues/: datatypes.js  issue25.js  issue34.js  issue41.js  issue50.js
lib/: index.d.ts  index.js  index.js.map  noderfc-bindings.d.ts  noderfc-bindings.js  sapnwrfc-client.d.ts  sapnwrfc-server.d.ts  sapnwrfc-throughput.js  sapnwrfc.js
lib/js/: sapnwrfc-client.d.ts  sapnwrfc-client.js  sapnwrfc-client.js.map
lib/linux_x64/: rfc-4.6.2.node  rfc-6.9.1.node
lib/windows_x64/: rfc-4.6.2.node  rfc-6.9.1.node
lib/wrapper/: cancel.js  cancel.js.map  noderfc-bindings.d.ts  noderfc-bindings.js  noderfc-bindings.js.map  noderfc-cancel.js  noderfc-cancel.js.map  sapnwrfc-client.d.ts  sapnwrfc-client.js  sapnwrfc-client.js.map  sapnwrfc-pool.d.ts  sapnwrfc-pool.js  sapnwrfc-pool.js.map  sapnwrfc-server.js  sapnwrfc-server.js.map  sapnwrfc-throughput.d.ts  sapnwrfc-throughput.js  sapnwrfc-throughput.js.map
module_mods/: host_instead_repo.patch  proxy_support_github.patch
node-rfc/: CHANGES  README.md  index.js  package.json
samples/issues/: exception.js  memleak.js  perf.js
samples/readme/: abapSystem.js  abapSystem.ts  async.js  async.ts  callbacks.js  pool.js  promises.js  tsconfig.json
src/: Client.cc  Client.h  Pool.cc  Pool.h  Server.cc  Server.h  Throughput.cc  Throughput.h  addon.cc  client.cc  client.h  client.pre.cc  client.pre.h  clientio.cc  error.cc  error.h  macros.h  node_sapnwrfc.cc  noderfc.h  noderfcsdk.cc  noderfcsdk.h  nwrfcsdk.cc  nwrfcsdk.h  rfc.cc  rfcio.cc  rfcio.h  wrappers.cc  wrappers.h
src/cpp/: Client.cc  Client.h  Log.cc  Log.h  Pool.cc  Pool.h  Server.cc  Server.h  Throughput.cc  Throughput.h  addon.cc  noderfc.h  nwrfcsdk.cc  nwrfcsdk.h  server_api.cc  server_api.h  suppressions.txt
src/ts/: index.ts  noderfc-bindings.ts  sapnwrfc-client.ts  sapnwrfc-pool.ts  sapnwrfc-server.ts  sapnwrfc.ts  tsconfig.json  tslint.json
src/wrapper/: sapnwrfc-client.ts  tsconfig.json  typings.json
test/: abapSystem.js  addon.methods.spec.js  addon.methods.spec.ts  async.js  await.spec.js  build.sh  concurrency.await.spec.js  concurrency.callback.spec.js  concurrency.promise.spec.js  config.js  connParams.js  connection.js  connection.promise.spec.js  connection.spec.js  datatypes.js  datatypes.spec.js  errors.abap.spec.js  errors.connect.spec.js  errors.invoke.spec.js  errors.js  errors.promise.spec.js  errors.spec.js  index.spec.js  lifecycle.js  lifecycle.spec.js  noderfc.js  options.js  options.promise.spec.js  options.spec.js  package.json  parallel.js  parallel.promise.spec.js  parallel.spec.js  performance.js  performance.spec.js  pool.js  pool.lifecycle.spec.js  pool.options.spec.js  pool.spec.js  promise.async.js  (+15 more)
test/call_options/: callback.spec.js  callback.spec.ts  promise.spec.js  promise.spec.ts
test/cancel/: addon.cancelClient.promise.spec.ts  addon.cancelClient.spec.ts  client.cancel.promise.spec.ts  client.cancel.spec.ts  timeout.call.spec.ts  timeout.client.spec.ts
test/client/: direct.callback.spec.js  direct.callback.spec.ts  direct.promise.spec.js  direct.promise.spec.ts  websocketrfc.spec.js  websocketrfc.spec.ts
test/concurrency/: await.js  await.spec.js  await.spec.ts  callback.js  callback.spec.js  callback.spec.ts  concurrency.await.spec.js  concurrency.callbacks.spec.js  concurrency.promise.spec.js  concurrency.spec.js  config.js  index.spec.js  locking.spec.js  promise.js  promise.spec.js  promise.spec.ts
test/connection/: callback.js  callback.spec.js  index.spec.js  promise.js  promise.spec.js
test/datatypes/: all.spec.js  all.spec.ts  datatypes.js  datatypes.spec.js  index.spec.js  utclong.js  utclong.spec.js  utclong.spec.ts
test/errors/: abap.js  abap.spec.js  abap.spec.ts  connect.js  connect.spec.js  connect.spec.ts  index.spec.js  invoke.js  invoke.spec.js  invoke.spec.ts  promise.js  promise.spec.js  promise.spec.ts
test/locking/: callback.js  callback.spec.js  callback.spec.ts  index.spec.js  promise.js  promise.spec.js  promise.ts
test/options/: index.spec.js  options.js  options.promise.js  options.promise.spec.js  options.spec.js
test/performance/: abap.spec.js  abap.spec.ts
test/pool/: acquire-release.spec.js  acquire-release.spec.ts  errors.spec.js  errors.spec.ts  index.spec.js  options.spec.js  options.spec.ts  (+19 more)
testc/: concurrency.await.spec.js  concurrency.callback.spec.js  concurrency.promise.spec.js  config.js
(+42 files in other folders)
